# ai-roi-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
roi_calc/: capability_multipliers.py  constants.py  engineering_engine.py  models.py  people_engine.py  sensitivity.py
tests/: test_app_flow.py  test_audit_tabs.py  test_break_even.py  test_bridge_appendix_tab.py  test_capability_multipliers.py  test_charts.py  test_components.py  test_constants.py  test_engineering_engine.py  test_footer.py  test_mode_router.py  test_models.py  test_people_engine.py  test_sensitivity.py  test_verification_tax.py
ui/: assessment_tab.py  bridge_appendix_tab.py  capability_audit_tab.py  charts.py  components.py  confidence_audit_tab.py  footer.py  inputs_review_tab.py  mode_router.py  results_tab_engineering.py  results_tab_people.py  sensitivity_tab.py  setup_tab.py  theme.py
ui/assets/: theme.css
